fix overflow problem for tasklist (y-direction)

--- a/resources/scss/animations/fade.scss
+++ b/resources/scss/animations/fade.scss
@@ -16,7 +16,7 @@ $fade-duration: 0.5s;
   }
 
   .tasklists-container {
-    .tasklist-container {
+    .tasklist-name-container {
       -webkit-transition-duration: $fade-duration;
               transition-duration: $fade-duration;
 
