--- a/resources/scss/sidebar.scss
+++ b/resources/scss/sidebar.scss
@@ -56,7 +56,7 @@ $sidebar-tasklist-height: 50px;
     overflow-x: hidden;
     overflow-y: auto;
 
-    .tasklist-container {
+    .tasklist-name-container {
       position: relative;
       width: 100%;
       height: $sidebar-tasklist-height;
@@ -74,7 +74,6 @@ $sidebar-tasklist-height: 50px;
         font-size: 18pt;
       }
     }
-
   }
 
   .logout-container {
